--- a/ProyectoJSP/src/main/webapp/login.html
+++ b/ProyectoJSP/src/main/webapp/login.html
@@ -9,7 +9,7 @@
 </head>
 <body class="container" >
 <div id="login">
-    <h1 class="text-center text-white pt-5">Universidad Don Bosco</h1>
+    <h1 class="text-center text-white pt-5">SUPERMERCADO</h1>
     <div class="container">
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
@@ -22,7 +22,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
-                            <input type="password" name="password" id="password" class="formcontrol">
+                            <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
                             <input type="submit" name="operacion" class="btn btn-info btn-md"
