--- a/ProyectoJSP/src/main/webapp/login.html
+++ b/ProyectoJSP/src/main/webapp/login.html
@@ -24,10 +24,13 @@
                             <label for="password" class="text-info">Password:</label><br>
                             <input type="password" name="password" id="password" class="form-control">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group text-center">
                             <input type="submit" name="operacion" class="btn btn-info btn-md"
                                    value="logueo">
                             <input type="hidden" name="operacion" value="logueo">
+                        </div>
+                        <div class="form-group text-center">
+                            <a href="Registrarse.html">Registrarse</a>
                         </div>
                         <br>
                     </form>
